dev.err
 ⚠ Attempted to load @next/swc-win32-x64-msvc, but an error occurred: \\?\C:\Users\Lesalon Jimmy\Desktop\Kim Designs Portfolio\node_modules\@next\swc-win32-x64-msvc\next-swc.win32-x64-msvc.node is not a valid Win32 application.
\\?\C:\Users\Lesalon Jimmy\Desktop\Kim Designs Portfolio\node_modules\@next\swc-win32-x64-msvc\next-swc.win32-x64-msvc.node
 ⨯ ./app/globals.css.webpack[javascript/auto]!=!./node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[2]!./node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[3]!./app/globals.css
SyntaxError: Unexpected token, expected "," (24:26)
Import trace for requested module:
./app/globals.css.webpack[javascript/auto]!=!./node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[2]!./node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[3]!./app/globals.css
./app/globals.css
 ⨯ ./app/globals.css.webpack[javascript/auto]!=!./node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[2]!./node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[3]!./app/globals.css
SyntaxError: Unexpected token, expected "," (24:26)
Import trace for requested module:
./app/globals.css.webpack[javascript/auto]!=!./node_modules/next/dist/build/webpack/loaders/css-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[2]!./node_modules/next/dist/build/webpack/loaders/postcss-loader/src/index.js??ruleSet[1].rules[13].oneOf[10].use[3]!./app/globals.css
./app/globals.css
 ⨯ ./components/Footer.tsx:2:1
Module not found: Can't resolve 'lucide-react'
[0m [90m 1 |[39m [36mimport[39m [33mLink[39m [36mfrom[39m [32m'next/link'[39m[33m;[39m[0m
[0m[31m[1m>[22m[39m[90m 2 |[39m [36mimport[39m { [0m
[0m [90m   |[39m [31m[1m^[22m[39m[0m
[0m [90m 3 |[39m   [33mGithub[39m[33m,[39m [0m
[0m [90m 4 |[39m   [33mLinkedin[39m[33m,[39m [0m
[0m [90m 5 |[39m   [33mInstagram[39m[33m,[39m [0m

https://nextjs.org/docs/messages/module-not-found

Import trace for requested module:
./app/layout.tsx
 ⚠ Fast Refresh had to perform a full reload due to a runtime error.
 ⨯ ./app/page.tsx:1:1
Module not found: Can't resolve '@/sections/HeroSection'
[0m[31m[1m>[22m[39m[90m 1 |[39m [36mimport[39m [33mHeroSection[39m [36mfrom[39m [32m'@/sections/HeroSection'[39m[33m;[39m[0m
[0m [90m   |[39m [31m[1m^[22m[39m[0m
[0m [90m 2 |[39m [36mimport[39m [33mClientResultsSection[39m [36mfrom[39m [32m'@/sections/ClientResultsSection'[39m[33m;[39m[0m
[0m [90m 3 |[39m [36mimport[39m [33mServicesSection[39m [36mfrom[39m [32m'@/sections/ServicesSection'[39m[33m;[39m[0m
[0m [90m 4 |[39m [36mimport[39m [33mFeaturedProjectsSection[39m [36mfrom[39m [32m'@/sections/FeaturedProjectsSection'[39m[33m;[39m[0m

https://nextjs.org/docs/messages/module-not-found
[Error: ENOENT: no such file or directory, stat 'C:\Users\Lesalon Jimmy\Desktop\Kim Designs Portfolio\.next\cache\webpack\client-development\5.pack.gz'] {
  errno: -4058,
  code: 'ENOENT',
  syscall: 'stat',
  path: 'C:\\Users\\Lesalon Jimmy\\Desktop\\Kim Designs Portfolio\\.next\\cache\\webpack\\client-development\\5.pack.gz'
}
 ⨯ unhandledRejection: [Error: ENOENT: no such file or directory, stat 'C:\Users\Lesalon Jimmy\Desktop\Kim Designs Portfolio\.next\cache\webpack\client-development\5.pack.gz'] {
  errno: -4058,
  code: 'ENOENT',
  syscall: 'stat',
  path: 'C:\\Users\\Lesalon Jimmy\\Desktop\\Kim Designs Portfolio\\.next\\cache\\webpack\\client-development\\5.pack.gz'
}
 ⨯ unhandledRejection: [Error: ENOENT: no such file or directory, stat 'C:\Users\Lesalon Jimmy\Desktop\Kim Designs Portfolio\.next\cache\webpack\client-development\5.pack.gz'] {
  errno: -4058,
  code: 'ENOENT',
  syscall: 'stat',
  path: 'C:\\Users\\Lesalon Jimmy\\Desktop\\Kim Designs Portfolio\\.next\\cache\\webpack\\client-development\\5.pack.gz'
}
<w> [webpack.cache.PackFileCacheStrategy] Caching failed for pack: Error: ENOENT: no such file or directory, stat 'C:\Users\Lesalon Jimmy\Desktop\Kim Designs Portfolio\.next\cache\webpack\client-development\5.pack.gz'
[Error: ENOENT: no such file or directory, stat 'C:\Users\Lesalon Jimmy\Desktop\Kim Designs Portfolio\.next\cache\webpack\server-development\6.pack.gz'] {
  errno: -4058,
  code: 'ENOENT',
  syscall: 'stat',
  path: 'C:\\Users\\Lesalon Jimmy\\Desktop\\Kim Designs Portfolio\\.next\\cache\\webpack\\server-development\\6.pack.gz'
}
 ⨯ unhandledRejection: [Error: ENOENT: no such file or directory, stat 'C:\Users\Lesalon Jimmy\Desktop\Kim Designs Portfolio\.next\cache\webpack\server-development\6.pack.gz'] {
  errno: -4058,
  code: 'ENOENT',
  syscall: 'stat',
  path: 'C:\\Users\\Lesalon Jimmy\\Desktop\\Kim Designs Portfolio\\.next\\cache\\webpack\\server-development\\6.pack.gz'
}
 ⨯ unhandledRejection: [Error: ENOENT: no such file or directory, stat 'C:\Users\Lesalon Jimmy\Desktop\Kim Designs Portfolio\.next\cache\webpack\server-development\6.pack.gz'] {
  errno: -4058,
  code: 'ENOENT',
  syscall: 'stat',
  path: 'C:\\Users\\Lesalon Jimmy\\Desktop\\Kim Designs Portfolio\\.next\\cache\\webpack\\server-development\\6.pack.gz'
}
<w> [webpack.cache.PackFileCacheStrategy] Caching failed for pack: Error: ENOENT: no such file or directory, stat 'C:\Users\Lesalon Jimmy\Desktop\Kim Designs Portfolio\.next\cache\webpack\server-development\6.pack.gz'
